--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@
   height: 25%;
   background-image: linear-gradient(0deg, #373c7a 0%, rgba(55, 60, 122, 0.41) 59%, rgba(155, 158, 189, 0.09) 91%, rgba(255, 255, 255, 0) 100%);
   z-index: 199;
+  transition: opacity .6s;
 }
 
 .home .place .place-image {
@@ -53,6 +54,54 @@
   color: #ffffff;
   z-index: 200;
   transition: opacity .3s;
+}
+
+.home .place .place-introduction {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: 226px;
+  padding-left: 118px;
+  width: 40%;
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.home .place .place-introduction.show {
+  display: block;
+}
+
+.home .place .place-introduction .place-introduction-order-number {
+  position: absolute;
+  top: 225px;
+  right: 86px;
+  font-family: BebasNeueBold;
+  font-size: 194px;
+  color: #e1e0e0;
+  opacity: 0.48;
+}
+
+.home .place .place-introduction .place-introduction-title {
+  font-family: PlayfairDisplay-Bold;
+  font-size: 71.25px;
+  color: #303030;
+}
+
+.home .place .place-introduction .place-introduction-text {
+  margin-top: 18px;
+  width: 80.9%;
+  font-family: Poppins-Regular;
+  font-size: 22.2px;
+  color: #303030;
+  text-align: justify;
+}
+
+.home .place .place-introduction .read-more {
+  margin-top: 34px;
+  font-family: PlayfairDisplay-Bold;
+  font-size: 24px;
+  color: #0943ba;
 }
 
 .home .Paris {
@@ -143,7 +192,7 @@
   width: 100%;
 }
 
-.home .place.click .order-number, .home .place.click .place-name {
+.home .place.click::after, .home .place.click .order-number, .home .place.click .place-name {
   opacity: 0;
 }
 
