--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@
 }
 
 .home .place .place-introduction {
-  display: none;
   position: absolute;
   top: 0;
   right: 0;
@@ -66,10 +65,15 @@
   width: 40%;
   height: 100%;
   background-color: #ffffff;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform .6s;
+  transition-timing-function: ease-in-out;
 }
 
 .home .place .place-introduction.show {
-  display: block;
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .home .place .place-introduction .place-introduction-order-number {
