--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,12 @@
   background-image: linear-gradient(0deg, #373c7a 0%, rgba(55, 60, 122, 0.41) 59%, rgba(155, 158, 189, 0.09) 91%, rgba(255, 255, 255, 0) 100%);
   z-index: 199;
   transition: opacity .6s;
+  transition-delay: 1.2s;
 }
 
 .home .place .place-image {
   transition: transform .6s;
+  transition-delay: 1.2s;
 }
 
 .home .place .order-number {
@@ -42,7 +44,8 @@
   right: 7.2%;
   font-family: BebasNeueBold;
   font-size: 200px;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
+  transition-delay: 1.5s;
 }
 
 .home .place .place-name {
@@ -53,7 +56,8 @@
   font-size: 100px;
   color: #ffffff;
   z-index: 200;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
+  transition-delay: 1.5s;
 }
 
 .home .place .place-introduction {
@@ -68,20 +72,37 @@
   transform: translateX(100%);
   transition: transform .6s;
   transition-timing-function: ease-in-out;
+  transition-delay: 0.6s;
 }
 
 .home .place .place-introduction.show {
   transform: translateX(0);
+  transition-delay: 0.6s;
 }
 
 .home .place .place-introduction.show .place-introduction-order-number {
   opacity: .48;
   transform: translateY(0);
+  transition-delay: 1.4s;
 }
 
 .home .place .place-introduction.show .place-introduction-content {
   opacity: 1;
   transform: translateY(0);
+  transition-delay: 1.2s;
+}
+
+.home .place .place-introduction .place-introduction-close-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 59px;
+  height: 59px;
+  background-color: transparent;
+  background-image: url("../images/close.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .home .place .place-introduction .place-introduction-order-number {
@@ -93,15 +114,13 @@
   color: #e1e0e0;
   opacity: 0;
   transform: translateY(22.4px);
-  transition: opacity .6s, transform .6s;
-  transition-delay: .8s;
+  transition: opacity 0.4s, transform 0.4s;
 }
 
 .home .place .place-introduction .place-introduction-content {
   opacity: 0;
   transform: translateY(140px);
-  transition: opacity .6s, transform .6s;
-  transition-delay: .6s;
+  transition: opacity 0.6s, transform 0.6s;
 }
 
 .home .place .place-introduction .place-introduction-content .place-introduction-title {
@@ -128,7 +147,7 @@
 
 .home .Paris {
   z-index: 100;
-  transition: margin-left .6s, width .6s, transform .6s;
+  transition: margin-left 0.6s, width 0.6s;
 }
 
 .home .Paris.hide-left {
@@ -137,6 +156,7 @@
 
 .home .Paris.click .place-image {
   transform: translateX(8%) scale(1.2);
+  transition-delay: 0s;
 }
 
 .home .Paris .place-image {
@@ -150,7 +170,7 @@
 
 .home .Dubai {
   z-index: 99;
-  transition: margin-left .6s, width .6s, transform .6s;
+  transition: margin-left 0.6s, width 0.6s;
 }
 
 .home .Dubai.hide-left {
@@ -159,6 +179,7 @@
 
 .home .Dubai.click .place-image {
   transform: translateX(7%) scale(1.2);
+  transition-delay: 0s;
 }
 
 .home .Dubai .place-image {
@@ -172,7 +193,7 @@
 
 .home .Brazil {
   z-index: 98;
-  transition: margin-left .6s, width .6s, transform .6s;
+  transition: margin-left 0.6s, width 0.6s;
 }
 
 .home .Brazil.hide-left {
@@ -181,6 +202,7 @@
 
 .home .Brazil.click .place-image {
   transform: translateX(0) scale(1.2);
+  transition-delay: 0s;
 }
 
 .home .Brazil .place-image {
@@ -194,11 +216,12 @@
 
 .home .India {
   z-index: 97;
-  transition: width .6s, transform .6s;
+  transition: width 0.6s;
 }
 
 .home .India.click .place-image {
   transform: translateX(9%) scale(1.2);
+  transition-delay: 0s;
 }
 
 .home .India .place-image {
@@ -210,12 +233,23 @@
   opacity: .16;
 }
 
+.home .place {
+  transition-delay: 1.2s;
+}
+
+.home .place.hide-left {
+  margin-left: -25%;
+  transition-delay: 0s;
+}
+
 .home .place.click {
   width: 100%;
+  transition-delay: 0s;
 }
 
 .home .place.click::after, .home .place.click .order-number, .home .place.click .place-name {
   opacity: 0;
+  transition-delay: 0s;
 }
 
 * {
@@ -225,6 +259,10 @@
 html, body, button, ul, li, h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
+}
+
+html {
+  -webkit-tap-highlight-color: transparent;
 }
 
 button, input {
