--- a/scss/layouts/_home.scss
+++ b/scss/layouts/_home.scss
@@ -18,6 +18,18 @@ $place-introduction-content-transition-duration: .6s;
   font-size: 0;
   overflow: hidden;
 
+  .logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 59px;
+    height: 59px;
+    background-image: url("../images/logo.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: $place-z-index + 1;
+  }
+
   .place {
     flex-shrink: 0;
     position: relative;
