--- a/scss/layouts/_home.scss
+++ b/scss/layouts/_home.scss
@@ -49,7 +49,7 @@ $place-introduction-content-transition-duration: .6s;
       left: 0;
       right: 0;
       height: 25%;
-      background-image: linear-gradient(0deg, rgb(55,60,122) 0%, rgba(55,60,122,0.41) 59%, rgba(155,158,189,0.09) 91%, rgba(255,255,255,0) 100%);
+      background-image: linear-gradient(0deg, rgb(55, 60, 122) 0%, rgba(55, 60, 122, .41) 59%, rgba(155, 158, 189, .09) 91%, rgba(255, 255, 255, 0) 100%);
       z-index: $place-z-index * 2 - 1;
       transition: opacity .6s;
       transition-delay: $place-introduction-content-transition-duration + $place-introduction-transition-duration;
