--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-wrap: nowrap;
-  max-width: 1500px;
+  max-width: 100vw;
   width: 100%;
   font-size: 0;
   overflow: hidden;
@@ -10,10 +10,10 @@
 
 .home .logo {
   position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 59px;
-  height: 59px;
+  top: 2vw;
+  left: 2vw;
+  width: 3.93333vw;
+  height: 3.93333vw;
   background-image: url("../images/logo.png");
   background-size: 100%;
   background-repeat: no-repeat;
@@ -24,11 +24,11 @@
   flex-shrink: 0;
   position: relative;
   display: inline-block;
-  max-height: 800px;
+  max-height: 53.33333vw;
   width: 25%;
   height: 53.3vw;
   background-color: #303030;
-  box-shadow: 8px 0px 15px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: 0.53333vw 0vw 1vw 0vw rgba(0, 0, 0, 0.35);
   overflow: hidden;
   cursor: pointer;
 }
@@ -56,7 +56,7 @@
   top: 3%;
   right: 7.2%;
   font-family: BebasNeueBold;
-  font-size: 200px;
+  font-size: 13.33333vw;
   transition: opacity 0.3s;
   transition-delay: 1.5s;
 }
@@ -66,7 +66,7 @@
   bottom: 8.75%;
   left: 12%;
   font-family: BebasNeueBold;
-  font-size: 100px;
+  font-size: 6.66667vw;
   color: #ffffff;
   z-index: 200;
   transition: opacity 0.3s;
@@ -77,8 +77,8 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding-top: 226px;
-  padding-left: 118px;
+  padding-top: 15.06667vw;
+  padding-left: 7.86667vw;
   width: 40%;
   height: 100%;
   background-color: #ffffff;
@@ -107,10 +107,10 @@
 
 .home .place .place-introduction .place-introduction-close-btn {
   position: absolute;
-  top: 30px;
-  right: 30px;
-  width: 59px;
-  height: 59px;
+  top: 2vw;
+  right: 2vw;
+  width: 3.93333vw;
+  height: 3.93333vw;
   background-color: transparent;
   background-image: url("../images/close.png");
   background-size: 100%;
@@ -120,41 +120,41 @@
 
 .home .place .place-introduction .place-introduction-order-number {
   position: absolute;
-  top: 225px;
-  right: 86px;
+  top: 15vw;
+  right: 5.73333vw;
   font-family: BebasNeueBold;
-  font-size: 194px;
+  font-size: 12.93333vw;
   color: #e1e0e0;
   opacity: 0;
-  transform: translateY(22.4px);
+  transform: translateY(1.49333vw);
   transition: opacity 0.4s, transform 0.4s;
 }
 
 .home .place .place-introduction .place-introduction-content {
   opacity: 0;
-  transform: translateY(140px);
+  transform: translateY(9.33333vw);
   transition: opacity 0.6s, transform 0.6s;
 }
 
 .home .place .place-introduction .place-introduction-content .place-introduction-title {
   font-family: PlayfairDisplay-Bold;
-  font-size: 71.25px;
+  font-size: 4.75vw;
   color: #303030;
 }
 
 .home .place .place-introduction .place-introduction-content .place-introduction-text {
-  margin-top: 18px;
+  margin-top: 1.2vw;
   width: 80.9%;
   font-family: Poppins-Regular;
-  font-size: 22.2px;
+  font-size: 1.48vw;
   color: #303030;
   text-align: justify;
 }
 
 .home .place .place-introduction .place-introduction-content .read-more {
-  margin-top: 34px;
+  margin-top: 2.26667vw;
   font-family: PlayfairDisplay-Bold;
-  font-size: 24px;
+  font-size: 1.6vw;
   color: #0943ba;
 }
 
