--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,21 @@
 @import "./common/function";
 @import "./layouts/home";
 
+@font-face {
+  font-family: BebasNeueBold;
+  src: url("../font/BebasNeue/BebasNeue-Bold.otf");
+}
+
+@font-face {
+  font-family: PlayfairDisplay-Bold;
+  src: url("../font/Playfair/PlayfairDisplay-Bold.otf");
+}
+
+@font-face {
+  font-family: Poppins-Regular;
+  src: url("../font/Poppins/Poppins-Regular.otf");
+}
+
 * {
   box-sizing: border-box;
 }
